# tasty-agent

./: .gitignore  ANALYSIS_SUMMARY.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTENT_MARKETING_ANALYSIS.md  CONTENT_MARKETING_QUICK_ACTIONS.md  CONTENT_OUTLINE_IDEAS.md  CONTENT_STRATEGY_INDEX.md  README.md  START_HERE.md  _DO_NOT_USE.py  auth.py  background.py  chat.py  cli.py  main.py  mcp_server.py  notebook.ipynb  order_manager.py  order_queue.json  pyproject.toml  requirement.txt  rich_cli.py  server.py  shared_order_logic.py  tasty_agent.py  tasty_functions.py  tastytrade_functions.py  tastytrade_login.py  tools.py  utils.py
.claude-plugin/: plugin.json
.github/workflows/: publish.yml
commands/: portfolio.md
examples/: agent.py  background.py  chat.py  mcp_client.py  modal_deploy.py
lib/: account.py  options.py  session.py
skills/trading/: SKILL.md
src/: tests.py  utils.py
src/core/: order_logic.py  order_manager.py
src/tasty_agent/: cli.py  common.py  getters.py  instrument.py  job_queue.py  market_data.py  positions.py  server.py  setup.py  task.py  tastytrade_api.py  tastytrade_client.py  tests.py  trading.py
src/tastytrade_api/: auth.py  functions.py  setup_auth.py
tasty_agent/: _version.py  account_helpers.py  core.py  market_data.py  orders.py  server.py  watchlists.py
tests/: test_integration.py  test_regression.py  test_server.py
tools/: balances.py  positions.py  transactions.py
